# ninacatcoin

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_IOS.txt  COMPILACION_FASE2_26_ENERO.md  DAEMON_CHECKPOINT_VALIDATOR_INTEGRATION.md  DISCORD_INTEGRATION_SUMMARY.md  Dockerfile  Doxyfile  IA_ACTIVATION_VERIFICATION.md  IMPLEMENTATION_IA_FULL_ACTIVATION.md  Makefile  NEXT_SESSION_QUICKSTART.md  NINA_ADVANCED_MODULES_GUIDE.md  NINA_AI_WHITEPAPER.md  NINA_AI_WHITEPAPER_ES.md  NINA_Learning_Analytics.ipynb  NINA_ML_EVOLUTION_ACHIEVED.md  NINA_PERSISTENCE_STATUS.md  NINA_QUICK_START.md  PHASE2_STATUS_REPORT.md  README.md  ROADMAP.md  SESSION_SUMMARY_DAEMON_INTEGRATION.md  VERIFICATION_COMPLETE_IA_100_PERCENT.md  VISUAL_SUMMARY_IA_ACTIVATION.md  WHITEPAPER.md  WHITEPAPER_EN.md  WHITEPAPER_EN_BITCOINTALK.txt  blocks.csv  build_daemon.sh  build_log5.txt  build_test.sh  compile.sh  compile_phase2.sh  demo_checkpoint_generator.py  extract_training_data.py  fix_model_path.py  nina_memory_dashboard.py  run_nina_analysis.py  (+9 more)
src/ai/: CHECKPOINTS_IA_COMPLETE_UNDERSTANDING.md  CHECKPOINTS_IA_RESUMEN_COMPLETO.md  CHECKPOINT_ARCHITECTURE_DIAGRAMS.md  CHECKPOINT_VALIDATOR_DIAGRAMS.md  CHECKPOINT_VALIDATOR_GUIDE.md  CHECKPOINT_VALIDATOR_INTEGRATION.hpp  CMakeLists.txt  COMIENZA_AQUI.md  HASHRATE_RECOVERY_COMPLETE_UNDERSTANDING.md  IA_CHECKPOINT_INTEGRATION.md  IA_CHECKPOINT_INTEGRATION_EXAMPLES.hpp  IA_HASHRATE_RECOVERY_INTEGRATION.md  IA_SYSTEM_COMPLETE_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDICE_RESTRICCIONES_FINANCIERAS.md  MASTER_INDEX_PHASES_1_5.md  NINA_CONECTORA_RED.md  NINA_CRECIMIENTO_DATA_MDB.md  NINA_EN_EL_CODIGO.md  NINA_OFFICIAL_DECLARATION.md  PHASE5_CHECKPOINT_MONITORING_COMPLETE.md  PHASE5_EXECUTIVE_SUMMARY.md  PHASE_6_CREATION_SUMMARY.md  README.md  (+55 more)
(+1140 files in other folders)
